--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </header>
 
     <main>
-        <h1>BARROCK ceramica artesanal</h1>
+        <h1>BARROCK</h1>
+        <p>ceramica artesanal</p>
+      
 
         <section id="inicio">
             <h2> Con materias primas naturales y manos talentosas creamos la vajilla de los suspiros. Felicidad al paso
